#58: Update Upload Activity To Work With New Models